# e69

./: .gitignore  Pipfile  README.md  deploy.bash  pyproject.toml  rsync.bash  run_dev.bash  run_test.bash
src/e69/: __init__.py  __main__.py
src/e69_iot/main/: main.ino
